--- a/index.html
+++ b/index.html
@@ -278,91 +278,127 @@
     <div></div>
   </section>
 
-  <section class="FAQ" id="FAQ">
-    <div class="headline2">
-      <h2>Frequently Asked Questions</h2>
-    </div>
+  <section class="faq">
 
-    <div class="questionr">
-      <button onclick="showAns1()" class="faq_button1"><img src="assets/images/landing/plus.png"></button>
-      <p>What is included in the Price ?</p>
-      <div id="answer1">
-        <p>"There are 3 packages to choose from. You can see them above."</p>
+      <div class="faqheadline">
+          <h2>Frequently Asked Questions</h2>
+      </div>      
+
+      <div class="question1">
+
+          <button class="faq_button">
+              <h3>What is included in the Price?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"There are 3 packages to choose from. You can see them above."</p>
+          </div>
+
       </div>
 
-    </div>
 
-    <div class="questionl">
-      <button onclick="showAns2()" class="faq_button2"><img src="assets/images/landing/plus.png"></button>
-      <p>How will the process go ? </p>
-      <div id="answer2">
-        <p>"Step 1 - Contact us
-          Step 2 - Have the first meeting
-          Step 3 - Personal Traits Test
-          Step 4 - Selection of majors and universities
-          Step 5 - Application Process
-          Step 6 - Acquiring via
-          Step 7 - Search for the accommodation
-          Step 8 - Leave abroad
-          "</p>
+      <div class="question2">
+
+          <button class="faq_button">
+              <h3>How will the process go?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"Step 1 - Contact us<br>
+                Step 2 - Have the first meeting<br>
+                Step 3 - Personal Traits Test<br>
+                Step 4 - Selection of majors and universities<br>
+                Step 5 - Application Process<br>
+                Step 6 - Acquiring via<br>
+                Step 7 - Search for the accommodation<br>
+                Step 8 - Leave abroad"<br>
+                </p>
+          </div>
+
       </div>
 
-    </div>
+      <div class="question3">
 
-    <div class="questionr">
-      <button onclick="showAns3()" class="faq_button3"><img src="assets/images/landing/plus.png"></button>
-      <p>What happens after I get accepted into the university ?</p>
-      <div id="answer3">
-        <p>"Visa Process, search for accommodation and departure abroad."</p>
+          <button class="faq_button">
+              <h3>What happens after I get accepted into the university?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"Visa Process, search for accommodation and departure abroad."</p>
+          </div>
+
       </div>
 
-    </div>
+      <div class="question4">
 
-    <div class="questionl">
-      <button onclick="showAns4()" class="faq_button4"><img src="assets/images/landing/plus.png"></button>
-      <p>How do I get my visa ?</p>
-      <div id="answer4">
-        <p>"There is a whole Application Process that we are very willing to help you with."</p>
+          <button class="faq_button">
+              <h3>How do I get my visa?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"There is a whole Application Process that we are very willing to help you with."</p>
+          </div>
+
       </div>
 
-    </div>
+      <div class="question5">
 
-    <div class="questionr">
-      <button onclick="showAns5()" class="faq_button5"><img src="assets/images/landing/plus.png"></button>
-      <p> How can I start?</p>
-      <div id="answer5">
-        <p>"Contact us and we’ll start the process together."</p>
+          <button class="faq_button">
+              <h3>How can I start?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"Contact us and we’ll start the process together."</p>
+          </div>
+
       </div>
 
-    </div>
+      <div class="question6">
 
-    <div class="questionl">
-      <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/plus.png"></button>
-      <p>Can I get a scholarship?</p>
-      <div id="answer6">
-        <p>"French public institutes and the Erasmus+ programme offer a large number of scholarships for foreign
-          students to help them finance their studies in France and Europe."</p>
+          <button class="faq_button">
+              <h3>Can I get a scholarship?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"French public institutes and the Erasmus+ programme offer a large number of scholarships for foreign
+                students to help them finance their studies in France and Europe."</p>
+          </div>
+
       </div>
 
-    </div>
-    <div class="questionr">
-      <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/plus.png"></button>
-      <p>Are European Diplomas Globally recognized?</p>
-      <div id="answer7">
-        <p>"Yes, it is Globally recognizable"</p>
+      <div class="question7">
+
+          <button class="faq_button">
+              <h3>Are European Diplomas Globally recognized?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"Yes, it is Globally recognizable"</p>
+          </div>
+
       </div>
 
-    </div>
-    <div class="questionl">
-      <button onclick="showAns8()" class="faq_button8"><img src="assets/images/landing/plus.png"></button>
-      <p>Will I be allowed to work there?</p>
-      <div id="answer8">
-        <p>"Yes. Every student can work there."</p>
+      <div class="question8">
+
+          <button class="faq_button">
+              <h3>Will I be allowed to work there?</h3>
+              <i class="fas fa-chevron-down"></i>
+          </button>
+
+          <div class="panel">
+              <p>"Yes. Every student can work there."</p>
+          </div>
+
       </div>
-    </div>
 
-
-  </section>
+</section>
 
   <footer>
     <div class="footer-content">
