--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           <br> <a href="service.html">Accomodation</a>
         </p>
         <br>
-        <button class="buttonStyle1" id="button-main" onClick="location.href='Contact-us.html'"><i
+        <button class="buttonStyle1"  onClick="location.href='Contact-us.html'"><i
             class="fas fa-phone-alt"></i>Contact
           Us</button></a></li>
       </div>
