Panel fix + Basic hover effect

--- a/universities.html
+++ b/universities.html
@@ -268,32 +268,32 @@
                 <h3>Student Life</h3>
             </div>
 
-            <div class="image1">
+            <div class="image1" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM1.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
 
-            <div class="image2">
+            <div class="image2" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM2.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
 
-            <div class="image3">
+            <div class="image3" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM3.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
 
-            <div class="image4">
+            <div class="image4" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM4.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
 
-            <div class="image5">
+            <div class="image5" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM5.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
 
-            <div class="image6">
+            <div class="image6" id="hover">
                 <img src="assets/images/studentlife/GEM/GEM6.jpeg"
                     alt="Image about student life in Grenoble Ecole de Management">
             </div>
@@ -442,32 +442,32 @@
                 <h2>Student Life</h2>
             </div>
 
-            <div class="image1">
+            <div class="image1" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC1.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
 
-            <div class="image2">
+            <div class="image2" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC2.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
 
-            <div class="image3">
+            <div class="image3" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC3.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
 
-            <div class="image4">
+            <div class="image4" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC4.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
 
-            <div class="image5">
+            <div class="image5" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC5.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
 
-            <div class="image6">
+            <div class="image6" id="hover">
                 <img src="assets/images/studentlife/ESC/ESC6.jpg"
                     alt="Image about student life in ESC - Clermont Business School">
             </div>
@@ -604,32 +604,32 @@
                 <h2>Student Life</h2>
             </div>
 
-            <div class="image1">
+            <div class="image1" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS1.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
 
-            <div class="image2">
+            <div class="image2" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS2.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
 
-            <div class="image3">
+            <div class="image3" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS3.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
 
-            <div class="image4">
+            <div class="image4" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS4.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
 
-            <div class="image5">
+            <div class="image5" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS5.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
 
-            <div class="image6">
+            <div class="image6" id="hover">
                 <img src="assets/images/studentlife/MBS/MBS6.jpg"
                     alt="Image about student life in MBS - Montpeiller Business School">
             </div>
@@ -765,32 +765,32 @@
                 <h2>Student Life</h2>
             </div>
 
-            <div class="image1">
+            <div class="image1" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA1.jpeg"
                     alt="Image about student life in Paris American Academy">
             </div>
 
-            <div class="image2">
+            <div class="image2" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA2.jpeg"
                     alt="Image about student life in Paris American Academy">
             </div>
 
-            <div class="image3">
+            <div class="image3" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA3.jpg"
                     alt="Image about student life in Paris American Academy">
             </div>
 
-            <div class="image4">
+            <div class="image4" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA4.jpg"
                     alt="Image about student life in Paris American Academy">
             </div>
 
-            <div class="image5">
+            <div class="image5" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA5.jpg"
                     alt="Image about student life in Paris American Academy">
             </div>
 
-            <div class="image6">
+            <div class="image6" id="hover">
                 <img src="assets/images/studentlife/PAA/PAA6.jpg"
                     alt="Image about student life in Paris American Academy">
             </div>
@@ -932,32 +932,32 @@
                 <h2>Student Life</h2>
             </div>
 
-            <div class="image1">
+            <div class="image1" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB1.jpeg"
                     alt="Image about student life in Paris School of Business">
             </div>
 
-            <div class="image2">
+            <div class="image2" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB2.jpg"
                     alt="Image about student life in Paris School of Business">
             </div>
 
-            <div class="image3">
+            <div class="image3" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB3.jpg"
                     alt="Image about student life in Paris School of Business">
             </div>
 
-            <div class="image4">
+            <div class="image4" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB4.jpg"
                     alt="Image about student life in Paris School of Business">
             </div>
 
-            <div class="image5">
+            <div class="image5" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB5.jpg"
                     alt="Image about student life in Paris School of Business">
             </div>
 
-            <div class="image6">
+            <div class="image6" id="hover">
                 <img src="assets/images/studentlife/PSB/PSB6.jpg"
                     alt="Image about student life in Paris School of Business">
             </div>
