--- a/universities.html
+++ b/universities.html
@@ -929,7 +929,7 @@
         <div class="studentlife">
 
             <div class="studentheadline">
-                <h2>Student Life</h2>
+                <h2>University Life</h2>
             </div>
 
             <div class="image1" id="hover">
