--- a/universities.html
+++ b/universities.html
@@ -265,7 +265,7 @@
         <div class="studentlife">
 
             <div class="studentheadline">
-                <h3>Student Life</h3>
+                <h3>University Life</h3>
             </div>
 
             <div class="image1" id="hover">
@@ -439,7 +439,7 @@
         <div class="studentlife">
 
             <div class="studentheadline">
-                <h2>Student Life</h2>
+                <h2>University Life</h2>
             </div>
 
             <div class="image1" id="hover">
@@ -601,7 +601,7 @@
         <div class="studentlife">
 
             <div class="studentheadline">
-                <h2>Student Life</h2>
+                <h2>University Life</h2>
             </div>
 
             <div class="image1" id="hover">
@@ -762,7 +762,7 @@
         <div class="studentlife">
 
             <div class="studentheadline">
-                <h2>Student Life</h2>
+                <h2>University Life</h2>
             </div>
 
             <div class="image1" id="hover">
