--- a/Contact-us.html
+++ b/Contact-us.html
@@ -214,7 +214,7 @@
                     <br> <a href="service.html">Accomodation</a>
                 </p>
                 <br>
-                <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i
+                <button id="footerbtn" class="buttonStyle1" onClick="location.href='Contact-us.html'"><i
                         class="fas fa-phone-alt"></i>Contact Us</button></a></li>
             </div>
 
