--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 
-  <div class="landing-img-grid">
+  <section class="landing-img-grid">
     <div class="scroll">
       <img id="car" src="assets/images/landing/car.png" alt="Your car going to France">
       <img id="plane" src="assets/images/landing/plane.png" alt="Your plane to France">
@@ -90,8 +90,7 @@
       </a>
     </div>
     <div class="arrow bounce"></div>
-  </div>
-  </div>
+</section>
 
 
 
@@ -115,23 +114,23 @@
 
 
     <div class="points">
-      <img src="assets/images/landing/chooseus1.png">
+      <img src="assets/images/landing/chooseus1.png" alt="Icon">
       <p>Saving around 30 000 $/year comparing <br>
         to going to American Universities </p>
 
-      <img src="assets/images/landing/chooseus2.png">
+      <img src="assets/images/landing/chooseus2.png" alt="Icon">
       <p>Organize everything from A to <br>
         Z at affordable cost </p>
 
-      <img src="assets/images/landing/chooseus3.png">
+      <img src="assets/images/landing/chooseus3.png" alt="Icon">
       <p>Provide professional tests and find <br>
         ideal majors and universities. </p>
 
-      <img src="assets/images/landing/chooseus4.png">
+      <img src="assets/images/landing/chooseus4.png" alt="Icon">
       <p>Our Partners we are collaborating - <br>
         Top World Universities </p>
 
-      <img src="assets/images/landing/chooseus5.png">
+      <img src="assets/images/landing/chooseus5.png" alt="Icon">
       <p>Profound knowledge and experience <br>
         in the field </p>
     </div>
@@ -141,8 +140,8 @@
     <div class="headline2">
       <h2>The Process We Will Go Through:</h2>
     </div>
-    <img id="airport" src="assets/images/landing/airport.png">
-    <section class="steps">
+    <img id="airport" src="assets/images/landing/airport.png" alt="Airport in your city">
+    <div class="steps">
 
 
       <img src="assets/images/landing/1.png" alt="1">
@@ -173,10 +172,10 @@
 
 
 
-    </section>
+      </div>
     <img class="showcase" id="image" src="assets/images/showcase1.png" alt="Student Life">
 
-    <script type="text/javascript">
+    <script>
       var image = document.getElementById("image");
       var currentPos = 0;
       var images = ["assets/images/showcase1.png", "assets/images/showcase2.jpg", "assets/images/showcase3.jpg", "assets/images/showcase4.jpg"]
@@ -198,7 +197,7 @@
     <div class="headline2">
       <h2>American Versus European Education Fee</h2>
     </div>
-    <img src="assets/images/landing/scales.png">
+    <img src="assets/images/landing/scales.png" alt="Comparison">
     <p>According to College Board, published tuition
       fees for 2018/19 at state colleges are an average
       of US$10,230 for state residents, and $26,290 for
@@ -287,7 +286,7 @@
       <div class="question1">
 
           <button class="faq_button">
-              <h3>What is included in the Price?</h3>
+             <h3>What is included in the Price?</h3> 
               <i class="fas fa-chevron-down"></i>
           </button>
 
@@ -413,15 +412,14 @@
         <br>
         <button class="buttonStyle1"  onClick="location.href='Contact-us.html'"><i
             class="fas fa-phone-alt"></i>Contact
-          Us</button></a></li>
+          Us</button>
       </div>
 
 
       <div class="footer-center">
         <h4><b> Contact Us </b></h4>
-        <a href="Contact-us.html#ContactUS">
-          <p> Our Team <br>
-        </a>
+          <p>
+          <a href="Contact-us.html#ContactUS">Our Team </a><br>
         <b>Telephone:</b>
         <br>+380972841850
         <br>
@@ -429,7 +427,7 @@
         <br>120 Wall Street
         <br>Floor 4
         <br> New York, NY 10005
-        </p>
+      </p>
       </div>
       <div class="footer-right">
         <h4><b>Study Abroad</b> </h4>
@@ -443,7 +441,6 @@
     </div>
     <div class="footer-bottom">
       <p> Copyright © 2021 European Study Solution </p>
-    </div>
     </div>
   </footer>
 
