--- a/universities.html
+++ b/universities.html
@@ -986,16 +986,15 @@
 
             <div class="footer-center">
                 <h4><b> Contact Us </b></h4>
-                <a href="Contact-us.html#ContactUS">
-                    <p> Our Team <br>
-                </a>
-                <b>Telephone:</b>
-                <br>+380972841850
-                <br>
-                <b>Address:</b>
-                <br>120 Wall Street
-                <br>Floor 4
-                <br> New York, NY 10005
+                <p>
+                    <a href="Contact-us.html#ContactUS">Our Team </a><br>
+                  <b>Telephone:</b>
+                  <br>+380972841850
+                  <br>
+                  <b>Address:</b>
+                  <br>120 Wall Street
+                  <br>Floor 4
+                  <br> New York, NY 10005
                 </p>
             </div>
 
