--- a/Contact-us.html
+++ b/Contact-us.html
@@ -120,7 +120,7 @@
                 <div class="cards">
                     <div class="card">
 
-                        <img src="assets/images/daria (2).jpg" width="170px" alt=contact-picture>
+                        <img src="assets/images/daria(2).jpg" width=170 alt=contact-picture>
 
                         <article class="card-text">
                             <h4> Dasha Malevka </h4>
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="assets/images/portrait2.jpg" width="170px" alt=contact-picture>
+                        <img src="assets/images/portrait2.jpg" width=170 alt=contact-picture>
 
                         <article class="card-text">
                             <h4> Martin James </h4>
@@ -215,7 +215,7 @@
                 </p>
                 <br>
                 <button id="footerbtn" class="buttonStyle1" onClick="location.href='Contact-us.html'"><i
-                        class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                        class="fas fa-phone-alt"></i>Contact Us</button>
             </div>
 
 
@@ -245,7 +245,6 @@
         </div>
         <div class="footer-bottom">
             <p> Copyright © 2021 European Study Solution </p>
-        </div>
         </div>
     </footer>
 
