--- a/service.html
+++ b/service.html
@@ -14,7 +14,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/css/service.css" rel=" stylesheet">
-    <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <script src="assets/js/Java.js" defer></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
@@ -86,7 +85,7 @@
                         accomodation and visa.</p>
 
                     <div class="contact-button">
-                        <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                        <button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact Us</button>
 
                     </div>
                 </section>
@@ -167,7 +166,7 @@
                 </p>
 
 
-                <img src="assets/images/france-service.png" id="price-img3" alt="France">
+                <img src="assets/images/france-service.png" class="price-img3" alt="France">
 
                 <h5>Do you have more questions about European Study Solution?</h5>
 
@@ -211,7 +210,7 @@
                     arrangements.
                 </p>
 
-                <img src="assets/images/guidance1.jpg" id="price-img" alt="Guidance">
+                <img src="assets/images/guidance1.jpg" class="price-img" alt="Guidance">
 
                 <h5>Do you have more questions related to Guidance?</h5>
 
@@ -223,7 +222,7 @@
             </div>
 
 
-            <div id="Service Price" class="tabcontent">
+            <div id="Service_Price" class="tabcontent">
                 <h3>Service Price</h3>
                 <p> European Study Solution has a payable service packages. You can choose from <strong> Basic,<br>
                         Standard
@@ -235,7 +234,7 @@
                     application and etc. <strong>First consultation is for free!</strong>
                 <p>
 
-                    <img src="assets/images/prices.png" id="price-img2" alt="Service Price">
+                    <img src="assets/images/prices.png" class="price-img2" alt="Service Price">
                 <h5 id="services-h5">Do you have more questions related to Service Price?</h5>
                 <div class="contact-button">
                     <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
@@ -269,7 +268,7 @@
                     the
                     details of your application already, we can help get you quicker outcomes.
                 </p>
-                <img src="assets/images/visa-application.jpg" id="price-img" alt="Visa Application">
+                <img src="assets/images/visa-application.jpg" class="price-img" alt="Visa Application">
 
                 <h5>Do you have more questions related to Visa Application?</h5>
 
@@ -306,7 +305,7 @@
                         guide
                         today.</strong>
                 </p>
-                <img src="assets/images/application.jpg" id="price-img" alt="Application">
+                <img src="assets/images/application.jpg" class="price-img" alt="Application">
                 <h5>Do you have more questions related to Filling out Application?</h5>
                 <div class="contact-button">
                     <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
@@ -338,7 +337,7 @@
                     in
                     the different university activities,<br> sports teams.
                 </p>
-                <img src="assets/images/communication.jpg" id="price-img" alt="Communication">
+                <img src="assets/images/communication.jpg" class="price-img" alt="Communication">
                 <h5>Do you have more questions related to Universities?</h5>
 
                 <div class="contact-button">
@@ -363,7 +362,7 @@
                     <strong> personal
                         traits test?</strong> Then<br> Personal Meetings with our agency crew its just for you!
                 </p>
-                <img src="assets/images/meetings.jpg" id="price-img4" alt="Meetings">
+                <img src="assets/images/meetings.jpg" class="price-img4" alt="Meetings">
                 <h5>Do you have more questions related to Individual Meetings?</h5>
 
                 <div class="contact-button">
@@ -403,7 +402,7 @@
                     <strong> 4. On-campus housing in halls of residence or small apartments<br><br></strong>
 
                 </p>
-                <img src="assets/images/accomodation.jpg" id="price-img" alt="Accomodation">
+                <img src="assets/images/accomodation.jpg" class="price-img" alt="Accomodation">
 
                 <h5>Do you have more questions related to Accomodation?</h5>
                 <div class="contact-button">
@@ -415,7 +414,7 @@
             </div>
 
             <div class="main-picture">
-                <img src="assets/images/service-main-pic.png" id="main-picture">
+                <img src="assets/images/service-main-pic.png" id="main-picture" alt="Service">
             </div>
 
         </div>
@@ -434,7 +433,7 @@
                 </p>
                 <br>
                 <button class="buttonStyle1" onClick="location.href='Contact-us.html'"><i
-                        class="fas fa-phone-alt"></i>Contact Us</button></a></li>
+                        class="fas fa-phone-alt"></i>Contact Us</button>
             </div>
 
 
@@ -464,7 +463,6 @@
         </div>
         <div class="footer-bottom">
             <p> Copyright © 2021 European Study Solution </p>
-        </div>
         </div>
     </footer>
 
