--- a/service.html
+++ b/service.html
@@ -117,7 +117,7 @@
                     Counselling</button>
                 <i class="fas fa-chevron-right"></i>
                 <hr>
-                <button class="tablinks" onclick="openCity(event, 'Service Price')">Service Price</button>
+                <button class="tablinks" onclick="openCity(event, 'Service_Price')">Service Price</button>
                 <i class="fas fa-chevron-right"></i>
                 <hr>
                 <button class="tablinks" onclick="openCity(event, 'Visa')">Visa Application</button>
@@ -223,7 +223,7 @@
             </div>
 
 
-            <div id="Service Price" class="tabcontent">
+            <div id="Service_Price" class="tabcontent">
                 <h3>Service Price</h3>
                 <p> European Study Solution has a payable service packages. You can choose from <strong> Basic,<br>
                         Standard
@@ -442,13 +442,13 @@
                 <h4><b> Contact Us </b></h4>
                 <p>
                     <a href="Contact-us.html#ContactUS">Our Team </a><br>
-                  <b>Telephone:</b>
-                  <br>+380972841850
-                  <br>
-                  <b>Address:</b>
-                  <br>120 Wall Street
-                  <br>Floor 4
-                  <br> New York, NY 10005
+                    <b>Telephone:</b>
+                    <br>+380972841850
+                    <br>
+                    <b>Address:</b>
+                    <br>120 Wall Street
+                    <br>Floor 4
+                    <br> New York, NY 10005
                 </p>
             </div>
 
